# OOP-labs-template-Tert

./: .gitattributes  README.md  main.cpp
include/: execute.h
lab01/: CMakeLists.txt  main.cpp
lab01/.devcontainer/: devcontainer.json
lab01/include/: execute.h  stdc++.h
lab01/src/: execute.cpp
lab01/test/: tests01.cpp
lab02/: .gitignore  CMakeLists.txt  main.cpp
lab02/.devcontainer/: devcontainer.json
lab02/include/: seven.h
lab02/src/: seven.cpp
lab02/test/: tests01.cpp
lab03/: CMakeLists.txt  main.cpp
lab03/.devcontainer/: devcontainer.json
lab03/include/: figure.h  figureArray.h  hexagon.h  octagon.h  pentagon.h
lab03/src/: figure.cpp  figureArray.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp
lab03/test/: tests01.cpp
lab04/: CMakeLists.txt  main.cpp
lab04/.devcontainer/: devcontainer.json
lab04/src/: figure.h  figureArray.h  hexagon.h  ifigure.h  octagon.h  pentagon.h  point.h
lab04/test/: tests01.cpp
lab05/: CMakeLists.txt  main.cpp
lab05/.devcontainer/: devcontainer.json
lab05/src/: iterator.h  memoryResource.h  stack.h
lab05/test/: tests01.cpp
lab06/: CMakeLists.txt  main.cpp
lab06/.devcontainer/: devcontainer.json
lab06/include/: NPC.h  NPCFactory.h  Observer.h  Orc.h  Robber.h  Visitor.h  Werewolf.h
lab06/src/: NPC.cpp  NPCFactory.cpp  Observer.cpp  Orc.cpp  Robber.cpp  Visitor.cpp  Werewolf.cpp
lab06/test/: tests01.cpp
lab07/: .gitignore  CMakeLists.txt  main.cpp
lab07/.devcontainer/: devcontainer.json
lab07/include/: logger.h  npc.h  npcfactory.h  orc.h  robber.h  scheduler.h  task.h  (+2 more)
src/: execute.cpp
(+10 files in other folders)
